# visar

./: .gitignore  .vimrc  CMakeLists.txt  README.md  README.txt  main.cpp
cmake/: LinkOpenCV.cmake  UseOpenCV.cmake
comms/: Net.cpp  Net.h
core/: CommunicationLoop.h  DummyRobotController.cpp  DummyRobotController.h  OverwriteQueue.cpp  OverwriteQueue.h  Params.cpp  Params.h  ProgramInputParser.cpp  ProgramInputParser.h  RobotController.cpp  RobotController.h  RoverRobotController.cpp  RoverRobotController.h  SegmentationPipeline.cpp  SegmentationPipeline.h  Timer.cpp  Timer.h  Util.cpp  Util.h  botCalib.h  camCalib.h  capture.cpp  capture.h  img_proc_fcns.cpp  img_proc_fcns.h  init_structures.cpp  init_structures.h  structures.h
data/: eng_stat_obst.avi
graphbasedsegmentation/: README  convolve.h  filter.h  imconv.h  segment-image.h
